# atlas-metrics-sdk

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
atlas/: __init__.py  atlas_client.py  http_client.py  metrics.py  models.py  rates.py  time_helpers.py
examples/: list_devices.py  list_facilities.py  read_metrics.py  read_rates.py
tests/: test_atlas_client.py  test_http_client.py  test_models.py  test_time_helpers.py
