[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-metrics"
version = "1.0.0"
description = "Python API Client for retrieving metric point values from the Atlas platform."
requires-python = ">=3.11"
dependencies = ["httpx", "orjson", "pydantic", "requests"]

[tool.hatch.build.targets.sdist]
exclude = ["/examples"]

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    "I",      # isort
    "COM812", # trailing commas
    "S101",   # assert (disallow assert outside tests)
    "DTZ",    # ban unsafe usage of naive datetime
    "UP",     # upgrade syntax to newer versions
]

[tool.ruff.lint.per-file-ignores]
"atlas/__init__.py" = [
    "F403" # allow "from {name} import *"
]
# Allow certain conventions in test files
"tests/**/*.py" = [
    "S101" # assert,
]
