[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-metrics"
version = "1.0.0"
description = "Python API Client for retrieving metric point values from the Atlas platform."
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.11.1",
    "pydantic>=2.12.4,<3.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "types-requests<2.34.0.0",  # The 'requests' package includes type annotations and stubs since version 2.34.0
    "pytest==9.1.*",
    "pytest-mock==3.15.*",
    "pytest-cov==7.1.*",
    "ruff==0.15.*",
    "mypy==2.2.*",
    "griffe==2.1.*",
]

[tool.coverage.run]
branch = true
source = ["atlas"]

[tool.hatch.build.targets.sdist]
exclude = ["/examples"]

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.mypy]
files = ["atlas", "examples", "tests"]
strict = true
warn_unreachable = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    "I",      # isort
    "COM812", # trailing commas
    "S101",   # assert (disallow assert outside tests)
    "DTZ",    # ban unsafe usage of naive datetime
    "UP",     # upgrade syntax to newer versions
]

[tool.ruff.lint.per-file-ignores]
"atlas/__init__.py" = [
    "F403" # allow "from {name} import *"
]
# Allow certain conventions in test files
"tests/**/*.py" = [
    "S101" # assert,
]
